--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:display=swap');
 @import "~normalize.css";
+@import "~bootstrap";
 
 @import "header";
-@import "toolbar";
-@import "formula";
-@import "table";
-@import "dashboard";
+@import "footer";
+@import "home-page";
 
 * {
   margin: 0;
@@ -14,14 +14,8 @@
 }
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 12px;
 }
 
-.excel {
-  position: relative;
-  color: #888;
-  height: 100%;
-  min-width: 100%;
-  font-size: .8rem;
-}
+
