--- a/src/scss/home-page.scss
+++ b/src/scss/home-page.scss
@@ -100,6 +100,10 @@ h2{
 #we-do{
   background: #EBF1FF;
   padding: 95px 0 78px 0;
+
+  h2{
+    padding: 0 10px;
+  }
   .icons-block{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -108,9 +112,8 @@ h2{
     .one-icon-block{
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-
+      padding: 0;
       h3 {
         margin: 38px 0 20px 0;
         font-style: normal;
@@ -143,70 +146,75 @@ h2{
     }
   }
 }
-#real-demand-delivered{
-
-  background-repeat: no-repeat;
-  background-size: cover;
+.real-demand-row {
   max-width: 930px;
   margin: 0 auto;
-  padding: 115px 0 155px 0;
-
-  .info{
-    display: flex;
-
-    span{
-      font-style: normal;
-      font-weight: bold;
-      font-size: 102px;
-      color: #000000;
-      opacity: 0.07;
-      line-height: 1;
-      margin-right: 20px;
-      font-family: 'Quicksand', sans-serif;
-    }
-
-    .text{
-      h2{
-        text-align: left;
-        margin-bottom: 20px;
-        line-height: 1.1;
-      }
-      p{
-        font-family: Open Sans;
-        font-style: normal;
-        font-weight: normal;
-        text-align: left;
-        font-size: 19px;
-        line-height: 1.6;
-        color: #000000;
-      }
-    }
-  }
-
-  .first-row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 60px;
-    margin-bottom: 90px;
-  }
-  .second-row{
-    display: flex;
-    justify-content: center;
-    align-items: end;
+  padding: 65px 0;
+}
+#real-demand-delivered{
+  background-image: url("../acetss/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 60px 0 20px 0;
+  padding-bottom: 85px;
 
     .info{
-      padding-top: 35px;
-    }
-    span{
-      margin-right: 40px;
-      font-family: 'Quicksand', sans-serif;
+      display: flex;
+
+      span{
+        font-style: normal;
+        font-weight: bold;
+        font-size: 102px;
+        color: #000000;
+        opacity: 0.07;
+        line-height: 1;
+        margin-right: 20px;
+        font-family: 'Quicksand', sans-serif;
+      }
+
+      .text{
+        h2{
+          text-align: left;
+          margin-bottom: 20px;
+          line-height: 1.1;
+        }
+        p{
+          font-family: Open Sans;
+          font-style: normal;
+          font-weight: normal;
+          text-align: left;
+          font-size: 19px;
+          line-height: 1.6;
+          color: #000000;
+        }
+      }
     }
 
-    .image{
-      padding-left: 85px;
+    .first-row{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-left: 60px;
+      margin-bottom: 100px;
     }
-  }
+    .second-row{
+      display: flex;
+      justify-content: center;
+      align-items: end;
+
+      .info{
+        padding-top: 55px;
+      }
+      span{
+        margin-right: 40px;
+        font-family: 'Quicksand', sans-serif;
+      }
+
+      .image{
+        padding-left: 85px;
+      }
+    }
+
 }
 #how-we-do {
   background: #00196C;
@@ -354,7 +362,7 @@ h2{
 }
 #brands{
   background: #EBF1FF;
-  margin-top: -67px;
+  margin-top: -75px;
   padding: 215px 0 110px 0;
 
   .brands-logos{
@@ -373,6 +381,8 @@ h2{
 #ready {
   padding: 83px 0;
   background-image: url("../acetss/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   h2{
     font-family: Open Sans;
     font-style: normal;
@@ -380,6 +390,7 @@ h2{
     font-size: 37px;
     line-height: 141%;
     text-align: center;
+    padding: 0 8px;
     color: #FFFFFF;
   }
 }
@@ -404,7 +415,7 @@ h2{
     box-sizing: border-box;
     width: 100%;
     margin-bottom: 10px;
-    padding: 20px 0;
+    padding: 20px 10px;
 
     &:hover {
       border: 3px solid #B073FF;
