--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,9 @@
 @import "publisher";
 @import "liveCalls";
 @import "managedServices";
+@import "saas";
+@import "contactUs";
+@import "liveLeads";
 @import "mobile";
 
 * {
