added 2 pages with tabs and 2 pop-up

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,7 @@
 @import "liveCalls";
 @import "managedServices";
 @import "saas";
+@import "privacyPolicy";
 @import "contactUs";
 @import "liveLeads";
 @import "mobile";
