--- a/src/scss/home-page.scss
+++ b/src/scss/home-page.scss
@@ -5,6 +5,7 @@ body{
   max-width: 1720px;
   margin: 0 auto;
   position: relative;
+  padding: 0!important;
 }
 ul{
   margin: 0;
@@ -78,6 +79,7 @@ h2{
           display: flex;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
         }
         a:nth-child(1){
           margin-right: 17px;
@@ -95,6 +97,228 @@ h2{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+  }
+}
+
+.modal{
+  .modal-dialog{
+    max-width: 912px;
+    margin: 0 auto;
+    .modal-header{
+      position: relative;
+      background: transparent;
+      padding: 0;
+      height: 0;
+      border: none;
+      button{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 2;
+      }
+    }
+  }
+
+}
+#pop-up.try{
+  .image {
+    img {
+      max-width: 1030px;
+    }
+  }
+  .get-started {
+    max-width: 340px;
+    margin-left: 230px;
+    margin-right: -120px;
+  }
+  .goal{
+    margin-bottom: 30px;
+    p.title{
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 177.5%;
+      color: #000000;
+      opacity: 0.45;
+      margin-top: 8px;
+    }
+    .goals{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 15px;
+
+      .one-g{
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        img{
+          margin-right: 15px;
+        }
+        p{
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 160%;
+          color: #000000;
+          margin: 0;
+          opacity: 0.8;
+        }
+      }
+    }
+  }
+}
+#pop-up {
+  background: #000D37;
+  position: relative;
+
+  .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 912px;
+      margin: 0 auto;
+    }
+  }
+
+  .info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .button {
+    background: rgba(255, 255, 255, 0.2);
+    height: 170px;
+    width: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+
+    .button-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #FFFFFF;
+      height: 150px;
+      width: 150px;
+      border-radius: 50%;
+    }
+  }
+
+  .phone {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    h2 {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 51px;
+      line-height: 110%;
+      color: #FFFFFF;
+      text-align: center;
+      margin: 20px 0 10px 0;
+    }
+
+    p.subtitle {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 177.5%;
+      color: #FFFFFF;
+      margin: 0;
+    }
+  }
+
+  .get-started {
+    max-width: 315px;
+    margin-left: 190px;
+    margin-right: -70px;
+
+    h2 {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 51px;
+      line-height: 110%;
+      color: #000000;
+      opacity: 0.8;
+      text-align: left;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+#submit {
+  margin-top: 17px;
+  align-items: center;
+  display: flex;
+
+  input {
+    background: #B073FF;
+    border-radius: 100px;
+    width: 169px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 140%;
+    text-align: center;
+    color: #FFFFFF;
+    height: 48px;
+    border: none;
+    margin-right: 25px;
+  }
+
+  a.sign {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 177.5%;
+    color: #B073FF;
+    padding: 5px;
+  }
+}
+
+#information {
+  label {
+    margin-bottom: 0;
+  }
+
+  p.title {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 177.5%;
+    color: #000000;
+    opacity: 0.45;
+    margin: 0 0 8px 0;
+  }
+
+  input {
+    width: 100%;
+    background: #F6F6F6;
+    border: 1px solid rgba(0, 0, 0, 0.03);
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 0 20px;
+    height: 44px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 177.5%;
+    color: #000000;
   }
 }
 #we-do{
@@ -363,13 +587,13 @@ h2{
 #brands{
   background: #EBF1FF;
   margin-top: -75px;
-  padding: 215px 0 110px 0;
+  padding: 215px 0 100px 0;
 
   .brands-logos{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 50px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 40px;
 
     .one-logo{
       display: flex;
