--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Quicksand:display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
 @import "~normalize.css";
 @import "~bootstrap";
 
@@ -15,6 +16,7 @@
 @import "contactUs";
 @import "buttons";
 @import "typography";
+@import "breadcrumbs";
 @import "liveLeads";
 @import "mobile";
 
