--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -24,6 +24,10 @@ header {
         justify-content: center;
         align-items: center;
         transition: all 0.3s ease-in-out;
+        &:hover{
+          color: #00196C;
+          background: white;
+        }
       }
     }
   }
