--- a/src/scss/contactUs.scss
+++ b/src/scss/contactUs.scss
@@ -71,7 +71,7 @@
           line-height: 143%;
           color: #FFFFFF;
           margin: 0;
-          padding: 0 16px;
+          padding: 0 0 0 16px;
         }
         img{
           padding: 0 16px;
