--- a/src/scss/publisher.scss
+++ b/src/scss/publisher.scss
@@ -5,9 +5,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 130px 0 73px 0;
+  padding: 0 0 73px 0;
+  flex-wrap: wrap;
+  .img-block{
+    flex: 1;
+  }
   .text-block{
     padding-left: 80px;
+    flex: 2;
 
     span{
       font-family: 'Open Sans', sans-serif;
